Bug 1924918 - Stop compacting folders when shutdown begins. r=BenC

Differential Revision: https://phabricator.services.mozilla.com/D225917

--HG--
extra : rebase_source : 9e88eee260b35a4c4a218743a64f5c96f12325fd
extra : amend_source : a74aefb530a03f0e109ec263834a5e2abb7ca2cc